Fix scrollbar always visible on mobile devices

--- a/application/shared-webapp/ui/tailwind.css
+++ b/application/shared-webapp/ui/tailwind.css
@@ -120,7 +120,7 @@
     font-synthesis: none;
     height: 100%;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     scroll-behavior: smooth;
     touch-action: manipulation;
   }
